Fixed index page

--- a/FitnessCentreSite/FitnessCentreSite.csproj
+++ b/FitnessCentreSite/FitnessCentreSite.csproj
@@ -91,6 +91,30 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\bx_loader.gif" />
+    <Content Include="Content\Images\controls.png" />
+    <Content Include="Content\Images\dno.jpg" />
+    <Content Include="Content\Images\fon.jpg" />
+    <Content Include="Content\Images\header.jpg" />
+    <Content Include="Content\Images\icon.png" />
+    <Content Include="Content\Images\icon1.png" />
+    <Content Include="Content\Images\inst.png" />
+    <Content Include="Content\Images\inst\1.jpg" />
+    <Content Include="Content\Images\inst\2.jpg" />
+    <Content Include="Content\Images\inst\3.jpg" />
+    <Content Include="Content\Images\inst\4.jpg" />
+    <Content Include="Content\Images\inst\5.jpg" />
+    <Content Include="Content\Images\logo.png" />
+    <Content Include="Content\Images\mot\1.jpg" />
+    <Content Include="Content\Images\mot\2.jpg" />
+    <Content Include="Content\Images\mot\3.jpg" />
+    <Content Include="Content\Images\banners\1.png" />
+    <Content Include="Content\Images\banners\2.png" />
+    <Content Include="Content\Images\banners\3.png" />
+    <Content Include="Content\Images\banners\4.png" />
+    <Content Include="Content\Images\banners\5.png" />
+    <Content Include="Content\Images\slider\bx_loader.gif" />
+    <Content Include="Content\Images\slider\controls.png" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\Style.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
