Added services page with subpages

--- a/FitnessCentreSite/FitnessCentreSite.csproj
+++ b/FitnessCentreSite/FitnessCentreSite.csproj
@@ -162,7 +162,12 @@
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
-    <Content Include="Views\Services\Services.cshtml" />
+    <Content Include="Views\Shared\_ServicesLayout.cshtml" />
+    <Content Include="Views\Services\Karate.cshtml" />
+    <Content Include="Views\Services\Taybok.cshtml" />
+    <Content Include="Views\Services\Body.cshtml" />
+    <Content Include="Views\Services\Cardio.cshtml" />
+    <Content Include="Views\Services\Gym.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
