--- a/FitnessCentreSite/FitnessCentreSite.csproj
+++ b/FitnessCentreSite/FitnessCentreSite.csproj
@@ -231,10 +231,12 @@
     <Content Include="Content\Images\bx_loader.gif" />
     <Content Include="Content\Images\cart.png" />
     <Content Include="Content\Images\cart2.png" />
+    <Content Include="Content\Images\close.png" />
     <Content Include="Content\Images\controls.png" />
     <Content Include="Content\Images\dno.jpg" />
     <Content Include="Content\Images\favicon.ico" />
     <Content Include="Content\Images\fon.jpg" />
+    <Content Include="Content\Images\fon4.jpg" />
     <Content Include="Content\Images\fot.png" />
     <Content Include="Content\Images\header.jpg" />
     <Content Include="Content\Images\icon.png" />
@@ -245,6 +247,40 @@
     <Content Include="Content\Images\inst\3.jpg" />
     <Content Include="Content\Images\inst\4.jpg" />
     <Content Include="Content\Images\inst\5.jpg" />
+    <Content Include="Content\Images\Koren\boroda.jpg" />
+    <Content Include="Content\Images\Koren\branch.jpg" />
+    <Content Include="Content\Images\Koren\dam.jpg" />
+    <Content Include="Content\Images\Koren\dam.png" />
+    <Content Include="Content\Images\Koren\dedor.jpg" />
+    <Content Include="Content\Images\Koren\dekster.jpg" />
+    <Content Include="Content\Images\Koren\fedor.jpeg" />
+    <Content Include="Content\Images\Koren\fedor.jpg" />
+    <Content Include="Content\Images\Koren\fedya.jpg" />
+    <Content Include="Content\Images\Koren\flex.jpg" />
+    <Content Include="Content\Images\Koren\froning_4.jpg" />
+    <Content Include="Content\Images\Koren\habib.jpg" />
+    <Content Include="Content\Images\Koren\johnson.jpg" />
+    <Content Include="Content\Images\Koren\jon.jpg" />
+    <Content Include="Content\Images\Koren\kai-greene.jpg" />
+    <Content Include="Content\Images\Koren\katler.jpg" />
+    <Content Include="Content\Images\Koren\konor.jpg" />
+    <Content Include="Content\Images\Koren\Maria.jpg" />
+    <Content Include="Content\Images\Koren\mariana.jpg" />
+    <Content Include="Content\Images\Koren\miha.jpg" />
+    <Content Include="Content\Images\Koren\Phil-Heath.jpg" />
+    <Content Include="Content\Images\Koren\ramy.jpg" />
+    <Content Include="Content\Images\Koren\rich-froning.png" />
+    <Content Include="Content\Images\Koren\rich.jpg" />
+    <Content Include="Content\Images\Koren\roden.jpg" />
+    <Content Include="Content\Images\Koren\rory.jpg" />
+    <Content Include="Content\Images\Koren\rory1.jpg" />
+    <Content Include="Content\Images\Koren\rory1.png" />
+    <Content Include="Content\Images\Koren\Sangra.jpg" />
+    <Content Include="Content\Images\Koren\skala.jpg" />
+    <Content Include="Content\Images\Koren\statham.jpg" />
+    <Content Include="Content\Images\Koren\tate.jpg" />
+    <Content Include="Content\Images\Koren\viktor.jpg" />
+    <Content Include="Content\Images\Koren\wolf.jpg" />
     <Content Include="Content\Images\logo3.png" />
     <Content Include="Content\Images\banners\1.png" />
     <Content Include="Content\Images\banners\2.png" />
@@ -259,8 +295,23 @@
     <Content Include="Content\Images\reklama\5.png" />
     <Content Include="Content\Images\slider\bx_loader.gif" />
     <Content Include="Content\Images\slider\controls.png" />
+    <Content Include="Content\Images\Magazin\Obyv\1.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\10.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\11.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\12.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\13.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\14.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\2.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\3.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\4.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\5.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\6.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\7.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\8.jpg" />
+    <Content Include="Content\Images\Magazin\Obyv\9.jpg" />
     <Content Include="Content\Images\uslug\12.png" />
     <Content Include="Content\Images\uslug\bas.png" />
+    <Content Include="Content\Images\uslug\bass.png" />
     <Content Include="Content\Images\uslug\BOJ.png" />
     <Content Include="Content\Images\uslug\GRUP.png" />
     <Content Include="Content\Images\uslug\IGR.png" />
