added list traners. delete traners,delete card orders

--- a/FitnessCentreSite/FitnessCentreSite.csproj
+++ b/FitnessCentreSite/FitnessCentreSite.csproj
@@ -382,6 +382,7 @@
     <Compile Include="Models\Role.cs" />
     <Compile Include="Models\SheduleElem.cs" />
     <Compile Include="Models\Traner.cs" />
+    <Compile Include="Models\TranerViewModel.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Models\UserDBContext.cs" />
     <Compile Include="NHibernateHelper.cs" />
@@ -421,6 +422,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\View.cshtml" />
     <Content Include="Views\Account\UserProfile.cshtml" />
+    <Content Include="Views\Admin\CreateTraner.cshtml" />
+    <Content Include="Views\Admin\Traners.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
